Removed newInstance method from Instruction iface.